Fix table wrapping
Wrap second column instead of making it scroll horizontally.

--- a/ui/scss/component/_table.scss
+++ b/ui/scss/component/_table.scss
@@ -155,12 +155,19 @@ th {
 }
 
 .table--btc-swap {
-  tr {
-    white-space: nowrap;
+  width: 100%;
+
+  td:nth-of-type(1) {
+    width: 1%;
   }
 
   td:nth-of-type(2) {
     font-size: var(--font-small);
+    width: 98%;
+  }
+
+  td:nth-of-type(3) {
+    width: 1%;
   }
 }
 
